--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -8,44 +8,26 @@
     <script type="text/javascript" src="/js/member.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <link rel="stylesheet" href="/css/post.css">
-
 </head>
-
 <body>
 <div th:replace="fragments/siderBar :: siderBar"></div>
 
-<!--<div class="container">-->
-<!--    <div class="rotate5 notes">-->
-<!--        <div class="postit">-->
-<!--            <p class="postitText">-->
-<!--                Here is my postit content Here is my postit contentdswaqffw-->
-<!--            </p>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
-
-<!--<div class="w3-panel w3-leftbar w3-sand">-->
-<!--    <p class="w3-xxlarge w3-serif">-->
-<!--        <i>"Make it as simple as possible, but not simpler."</i></p>-->
-<!--    <p>Albert Einstein</p>-->
-<!--</div>-->
-
 <div class="w3-sidebar w3-bar-block w3-collapse w3-card w3-animate-right" style="width:200px;right:0; padding: 30px 16px;" id="mySidebar" >
     <button id="buttonState" class="w3-bar-item w3-button w3-large " onclick="sideOpenClose()" name="open">Close &times;</button>
-    <a href="/question" class="w3-bar-item w3-button">오늘의 질문</a>
-    <a href="/answer" class="w3-bar-item w3-button">나의 답변조회</a>
+    <a href="/question" class="w3-bar-item w3-button questionButton">오늘의 질문</a>
+    <a href="/question2" class="w3-bar-item w3-button">나의 답변조회</a>
 </div>
 
 <div class="w3-card-4"style="margin-top: 56px;">
 
-    <header class="w3-container w3-light-grey">
+    <header id="today" class="w3-container w3-light-grey" style="font-size: 30px;">
         <h3>John Doe</h3>
     </header>
 
-    <div id="title" class="w3-container">
+    <div id="title" class="w3-container" style="font-size: 25px;">
         <p>1 new friend request</p>
         <hr>
-        <img src="/css2/file.jpg" alt="Avatar" class="w3-left w3-circle" style="height: 200px">
+        <img src="/css2/file.jpg" alt="Avatar" class="w3-left w3-circle" style="height: 200px;">
         <p>President/CEO at Mighty Schools...</p>
     </div>
 
