--- a/src/main/resources/templates/questionList.html
+++ b/src/main/resources/templates/questionList.html
@@ -20,7 +20,7 @@
 
   <div class="w3-row-padding">
     <div class="w3-third">
-      <input class="w3-input w3-border" type="text" placeholder="검색어를 입력하세요">
+      <input id="text" class="w3-input w3-border" type="text" placeholder="검색어를 입력하세요">
     </div>
     <div class="w3-third">
       <input class="w3-input w3-border" type="date" id="startDate" value="" min="2023-01-01" max="2033-12-31">
@@ -32,7 +32,7 @@
 
   </div>
   <div>
-    <table class="w3-table" style="border: 1px solid black;margin-left:auto;margin-right:auto;">
+    <table class="w3-table" style="border: 1px solid #6b6b6b;margin-left:auto;margin-right:auto;">
       <colgroup>
         <col width="30%"/>
         <col width="40%"/>
