--- a/src/main/resources/templates/itemStore.html
+++ b/src/main/resources/templates/itemStore.html
@@ -4,6 +4,7 @@
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script type="text/javascript" src="/js/common.js"></script>
+<script src="https://cdn.iamport.kr/v1/iamport.js"></script>
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <script type="text/javascript" src="/js/itemStore.js"></script>
 <body>
@@ -27,7 +28,7 @@
                 <span class="w3-opacity">per month</span>
             </li>
             <li class="w3-light-grey w3-padding-24">
-                <button class="w3-button w3-green w3-padding-large">Sign Up</button>
+                <button class="w3-button w3-green w3-padding-large" onclick="requestPay()">결제하기</button>
             </li>
         </ul>
     </div>
@@ -45,7 +46,7 @@
                 <span class="w3-opacity">per month</span>
             </li>
             <li class="w3-light-grey w3-padding-24">
-                <button class="w3-button w3-green w3-padding-large">Sign Up</button>
+                <button class="w3-button w3-green w3-padding-large" onclick="requestPay()">결제하기</button>
             </li>
         </ul>
     </div>
@@ -62,7 +63,7 @@
                 <span class="w3-opacity">per month</span>
             </li>
             <li class="w3-light-grey w3-padding-24">
-                <button class="w3-button w3-green w3-padding-large">Sign Up</button>
+                <button class="w3-button w3-green w3-padding-large" onclick="requestPay()">결제하기</button>
             </li>
         </ul>
     </div>
